@@ -19,7 +19,9 @@ fragment COLON: {input.LA(2) != ':'}?=> ':';
 fragment DOUBLE_COLON: {input.LA(2) == ':'}?=> '::';
 fragment QUESTION: {input.LA(2) != '?'}?=> '?';
 fragment DOUBLE_QUESTION: {input.LA(2) == '?'}?=> '??';
-fragment NAME: 'a'..'z' | 'A'..'Z' | '0'..'9' | '_' | '.' | '?.' | '#';
+fragment DIGIT: '0'..'9';
+fragment NAME: 'a'..'z' | 'A'..'Z' | DIGIT | '_' | '.' | '?.' | '#';
+fragment BRACKET_OR_SLICE: '[' (' '* DIGIT* ' '* ':' ' '* DIGIT* ' '* ']')?;
 
 COMMENT: '/*' .* '*/';
 QUOTED_TEXT: QUOTE (ESCAPE_QUOTE | ~QUOTE)* QUOTE;
@@ -29,5 +31,5 @@ ESCAPED_TEXT : ESCAPE . ;
 NAMED_PARAM: COLON (NAME)+;
 POSITIONAL_PARAM: QUESTION;
 
-LITERAL: (NAME | ' ' | '\t' | '\n' | '\r' | ',' | '@' | '!' | '=' | DOUBLE_COLON | ';' | '(' | ')' | '[' | ']'
+LITERAL: (NAME | ' ' | '\t' | '\n' | '\r' | ',' | '@' | '!' | '=' | DOUBLE_COLON | ';' | '(' | ')' | BRACKET_OR_SLICE | ']'
          | '+' | '-' | '<' | '>' | '%' | '&' | '^' | '|' | '$' | '~' | '{' | '}' | '`' | COLON '=' | DOUBLE_QUESTION)+ | '*' | '/';
