@@ -22,6 +22,8 @@
     - Support for Postgres MACADDR columns, using the @MacAddr qualifying annotation
     - Support for HSTORE columns, using the @HStore annotation
     - @Json type qualifier with Jackson 2 and Gson 2 bindings
+  - Improvements
+    - ColonStatementLexer: don't trip up over postgres array slice `array[3:4]` syntax
   - Oracle DB support changes
     - Due to ongoing stability problems with Oracle's Maven servers, we have split the
       jdbi3-oracle12 artifact out of the main project, to a new home at
